# Lab10

./: .clang-format  CMakeLists.txt  README.md  client.c  server.c
.cache/clangd/index/: client.c.CC542E2555C42055.idx  server.c.00C2189A3424B1E0.idx
client/: client.c  client.c.autosave  client.h  main.c
server/: server.c  server.h
shared/: info.c  info.h
